# October-Production-Co

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSING.md  Makefile  README.md  REUSE.toml  THIRD_PARTY_NOTICES.txt  TRADEMARK.md
.github/workflows/: ci.yml  release-juce.yml
LICENSES/: LicenseRef-OPC-Trademark.txt
docs/: ART_AND_CRAFT.md  ART_AND_CRAFT.txt
docs/development/: RELEASING.md
docs/legal/: LICENSING.md  THIRD_PARTY_NOTICES.txt  TRADEMARK.md
installers/linux/: install.sh
installers/macos/: build-pkg.sh  distribution.xml  welcome.html
installers/octobass/linux/: install.sh
installers/octobass/macos/: build-pkg.sh  distribution.xml  welcome.html
installers/octobass/windows/: OctoBASS.iss
installers/octobir/linux/: install.sh
installers/octobir/macos/: build-pkg.sh  distribution.xml  welcome.html
installers/octobir/windows/: OctobIR.iss
installers/windows/: OctoberPluginsSuite.iss
libs/juce-ui-shared/: CMakeLists.txt
libs/juce-ui-shared/Source/: LCDDisplay.h  LCDPainting.h  LCDSpectrumDisplay.h  OctoberLookAndFeel.cpp  OctoberLookAndFeel.h
libs/octobass-core/: CMakeLists.txt  README.md
libs/octobass-core/include/octobass-core/: BassProcessor.hpp  CompressorMode.hpp  FETCompressor.hpp  GraphicEQ.hpp  NamProcessor.hpp  Types.hpp
libs/octobass-core/src/: BassProcessor.cpp  FETCompressor.cpp  NamProcessor.cpp
libs/octobass-core/tests/: BassProcessorTests.cpp  CMakeLists.txt  GraphicEQTests.cpp  NamProcessorTests.cpp  README.md
libs/octobir-core/: CMakeLists.txt  README.md
libs/octobir-core/include/octobir-core/: IRLoader.hpp  IRProcessor.hpp  Types.hpp
libs/octobir-core/src/: IRLoader.cpp  IRProcessor.cpp
libs/octobir-core/tests/: BlendExtremeTests.cpp  CMakeLists.txt  ComponentTests.cpp  DynamicModeTests.cpp  IRLoaderTests.cpp  IRProcessorTests.cpp  LatencyCompensationTests.cpp  README.md  SidechainTests.cpp
plugins/juce-multiformat/: CMakeLists.txt
plugins/juce-multiformat/Source/: LCDDisplay.h  OctobIRLookAndFeel.cpp  OctobIRLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/juce-multiformat/tests/: PluginAudioTests.cpp  PluginProcessorTests.cpp
plugins/octobass/juce/: CMakeLists.txt
plugins/octobass/juce/Source/: GraphicEQDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.h
plugins/octobass/juce/tests/: CMakeLists.txt  PluginProcessorTests.cpp  TestMain.cpp
plugins/octobir/juce/: CMakeLists.txt
plugins/octobir/juce/Source/: PluginEditor.cpp  PluginEditor.h
plugins/octobir/juce/tests/: CMakeLists.txt  TestMain.cpp
plugins/octobir/vcv-rack/: CMakeLists.txt  Makefile  plugin.json
plugins/octobir/vcv-rack/src/: opc-vcv-ir.hpp  plugin.cpp  plugin.hpp
plugins/octobir/vcv-rack/tests/: VcvAudioTests.cpp  VcvModuleTests.cpp  rack_stub.hpp
plugins/vcv-rack/: CMakeLists.txt  Makefile  REMAINING_WORK.md
plugins/vcv-rack/src/: opc-vcv-ir.cpp  opc-vcv-ir.hpp
plugins/vcv-rack/tests/: CMakeLists.txt  VcvAudioTests.cpp  VcvModuleTests.cpp  rack_stub.hpp
scripts/: octobass_header.txt  octobir_header.txt  opc_header.txt  setup-dev.sh  show-header.sh  sync-vcv-version.sh
tests/: README.md
tests/data/: INPUT_VHD.nam
tones/nam_captures/: hm2 octobass distortion 0.nam  hm2 octobass distortion 1.nam  hm2 octobass distortion 2.nam  vhd octobass distortion 0.nam  vhd octobass distortion 1.nam
